# ngninx-reverse-proxy-manager

./: .gitignore  CMakeLists.txt  ConfigurationWriter.cpp  ConfigurationWriter.h  Destination.cpp  Destination.h  Service.cpp  Service.h  base-template.conf  http-template.conf  http-to-https-redirect-template.conf  https-template.conf  nrpm.cpp  template.conf
Exceptions/: FileOpenException.cpp  FileOpenException.h
